Allow switching to builder-on-module-path on demand